qt/gen_qwidget.h

typedef struct QActionEvent QActionEvent;
typedef struct QBackingStore QBackingStore;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QIcon QIcon;
typedef struct QKeyEvent QKeyEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScreen QScreen;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
bool QWidget_isAncestorOf(const QWidget* self, QWidget* child);
bool QWidget_autoFillBackground(const QWidget* self);
void QWidget_setAutoFillBackground(QWidget* self, bool enabled);
QBackingStore* QWidget_backingStore(const QWidget* self);
QWindow* QWidget_windowHandle(const QWidget* self);
QScreen* QWidget_screen(const QWidget* self);
QWidget* QWidget_createWindowContainer(QWindow* window);
void QWidget_windowTitleChanged(QWidget* self, struct miqt_string title);
void QWidget_connect_windowTitleChanged(QWidget* self, intptr_t slot);
void QWidget_windowIconChanged(QWidget* self, QIcon* icon);
void QWidget_connect_windowIconChanged(QWidget* self, intptr_t slot);
void QWidget_windowIconTextChanged(QWidget* self, struct miqt_string iconText);
void QWidget_connect_windowIconTextChanged(QWidget* self, intptr_t slot);
void QWidget_customContextMenuRequested(QWidget* self, QPoint* pos);
void QWidget_connect_customContextMenuRequested(QWidget* self, intptr_t slot);
QVariant* QWidget_inputMethodQuery(const QWidget* self, int param1);
int QWidget_inputMethodHints(const QWidget* self);
void QWidget_setInputMethodHints(QWidget* self, int hints);
struct miqt_string QWidget_tr2(const char* s, const char* c);
struct miqt_string QWidget_tr3(const char* s, const char* c, int n);
struct miqt_string QWidget_trUtf82(const char* s, const char* c);
struct miqt_string QWidget_trUtf83(const char* s, const char* c, int n);
void QWidget_render2(QWidget* self, QPaintDevice* target, QPoint* targetOffset);
void QWidget_render3(QWidget* self, QPaintDevice* target, QPoint* targetOffset, QRegion* sourceRegion);
void QWidget_render4(QWidget* self, QPaintDevice* target, QPoint* targetOffset, QRegion* sourceRegion, int renderFlags);
void QWidget_render22(QWidget* self, QPainter* painter, QPoint* targetOffset);
void QWidget_render32(QWidget* self, QPainter* painter, QPoint* targetOffset, QRegion* sourceRegion);
void QWidget_render42(QWidget* self, QPainter* painter, QPoint* targetOffset, QRegion* sourceRegion, int renderFlags);
QPixmap* QWidget_grab1(QWidget* self, QRect* rectangle);
void QWidget_grabGesture2(QWidget* self, int type, int flags);
int QWidget_grabShortcut2(QWidget* self, QKeySequence* key, int context);
void QWidget_setShortcutEnabled2(QWidget* self, int id, bool enable);
void QWidget_setShortcutAutoRepeat2(QWidget* self, int id, bool enable);
void QWidget_setWindowFlag2(QWidget* self, int param1, bool on);
void QWidget_setAttribute2(QWidget* self, int param1, bool on);
QWidget* QWidget_createWindowContainer2(QWindow* window, QWidget* parent);
QWidget* QWidget_createWindowContainer3(QWindow* window, QWidget* parent, int flags);
bool QWidget_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QWidget_virtualbase_metaObject(const void* self);
bool QWidget_override_virtual_metacast(void* self, intptr_t slot);
void* QWidget_virtualbase_metacast(void* self, const char* param1);
bool QWidget_override_virtual_metacall(void* self, intptr_t slot);
int QWidget_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QWidget_override_virtual_devType(void* self, intptr_t slot);
int QWidget_virtualbase_devType(const void* self);
bool QWidget_override_virtual_setVisible(void* self, intptr_t slot);
void QWidget_virtualbase_setVisible(void* self, bool visible);
bool QWidget_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QWidget_virtualbase_sizeHint(const void* self);
bool QWidget_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QWidget_virtualbase_minimumSizeHint(const void* self);
bool QWidget_override_virtual_heightForWidth(void* self, intptr_t slot);
int QWidget_virtualbase_heightForWidth(const void* self, int param1);
bool QWidget_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QWidget_virtualbase_hasHeightForWidth(const void* self);
bool QWidget_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QWidget_virtualbase_paintEngine(const void* self);
bool QWidget_override_virtual_event(void* self, intptr_t slot);
bool QWidget_virtualbase_event(void* self, QEvent* event);
bool QWidget_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QWidget_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QWidget_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QWidget_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QWidget_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QWidget_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QWidget_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QWidget_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QWidget_override_virtual_wheelEvent(void* self, intptr_t slot);
void QWidget_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QWidget_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QWidget_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QWidget_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QWidget_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QWidget_override_virtual_focusInEvent(void* self, intptr_t slot);
void QWidget_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QWidget_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QWidget_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QWidget_override_virtual_enterEvent(void* self, intptr_t slot);
void QWidget_virtualbase_enterEvent(void* self, QEvent* event);
bool QWidget_override_virtual_leaveEvent(void* self, intptr_t slot);
void QWidget_virtualbase_leaveEvent(void* self, QEvent* event);
bool QWidget_override_virtual_paintEvent(void* self, intptr_t slot);
void QWidget_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QWidget_override_virtual_moveEvent(void* self, intptr_t slot);
void QWidget_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QWidget_override_virtual_resizeEvent(void* self, intptr_t slot);
void QWidget_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QWidget_override_virtual_closeEvent(void* self, intptr_t slot);
void QWidget_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QWidget_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QWidget_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QWidget_override_virtual_tabletEvent(void* self, intptr_t slot);
void QWidget_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QWidget_override_virtual_actionEvent(void* self, intptr_t slot);
void QWidget_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QWidget_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QWidget_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QWidget_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QWidget_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
void QWidget_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);