qt/gen_qwidget.nim

proc fcQWidget_isAncestorOf(self: pointer, child: pointer): bool {.importc: "QWidget_isAncestorOf".}
proc fcQWidget_autoFillBackground(self: pointer, ): bool {.importc: "QWidget_autoFillBackground".}
proc fcQWidget_setAutoFillBackground(self: pointer, enabled: bool): void {.importc: "QWidget_setAutoFillBackground".}
proc fcQWidget_backingStore(self: pointer, ): pointer {.importc: "QWidget_backingStore".}
proc fcQWidget_windowHandle(self: pointer, ): pointer {.importc: "QWidget_windowHandle".}
proc fcQWidget_screen(self: pointer, ): pointer {.importc: "QWidget_screen".}
proc fcQWidget_createWindowContainer(window: pointer): pointer {.importc: "QWidget_createWindowContainer".}
proc fcQWidget_windowTitleChanged(self: pointer, title: struct_miqt_string): void {.importc: "QWidget_windowTitleChanged".}
proc fQWidget_connect_windowTitleChanged(self: pointer, slot: int) {.importc: "QWidget_connect_windowTitleChanged".}
proc fcQWidget_windowIconChanged(self: pointer, icon: pointer): void {.importc: "QWidget_windowIconChanged".}
proc fQWidget_connect_windowIconChanged(self: pointer, slot: int) {.importc: "QWidget_connect_windowIconChanged".}
proc fcQWidget_windowIconTextChanged(self: pointer, iconText: struct_miqt_string): void {.importc: "QWidget_windowIconTextChanged".}
proc fQWidget_connect_windowIconTextChanged(self: pointer, slot: int) {.importc: "QWidget_connect_windowIconTextChanged".}
proc fcQWidget_customContextMenuRequested(self: pointer, pos: pointer): void {.importc: "QWidget_customContextMenuRequested".}
proc fQWidget_connect_customContextMenuRequested(self: pointer, slot: int) {.importc: "QWidget_connect_customContextMenuRequested".}
proc fcQWidget_inputMethodQuery(self: pointer, param1: cint): pointer {.importc: "QWidget_inputMethodQuery".}
proc fcQWidget_inputMethodHints(self: pointer, ): cint {.importc: "QWidget_inputMethodHints".}
proc fcQWidget_setInputMethodHints(self: pointer, hints: cint): void {.importc: "QWidget_setInputMethodHints".}
proc fcQWidget_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWidget_tr2".}
proc fcQWidget_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWidget_tr3".}
proc fcQWidget_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWidget_trUtf82".}
proc fcQWidget_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWidget_trUtf83".}
proc fcQWidget_render2(self: pointer, target: pointer, targetOffset: pointer): void {.importc: "QWidget_render2".}
proc fcQWidget_render3(self: pointer, target: pointer, targetOffset: pointer, sourceRegion: pointer): void {.importc: "QWidget_render3".}
proc fcQWidget_render4(self: pointer, target: pointer, targetOffset: pointer, sourceRegion: pointer, renderFlags: cint): void {.importc: "QWidget_render4".}
proc fcQWidget_render22(self: pointer, painter: pointer, targetOffset: pointer): void {.importc: "QWidget_render22".}
proc fcQWidget_render32(self: pointer, painter: pointer, targetOffset: pointer, sourceRegion: pointer): void {.importc: "QWidget_render32".}
proc fcQWidget_render42(self: pointer, painter: pointer, targetOffset: pointer, sourceRegion: pointer, renderFlags: cint): void {.importc: "QWidget_render42".}
proc fcQWidget_grab1(self: pointer, rectangle: pointer): pointer {.importc: "QWidget_grab1".}
proc fcQWidget_grabGesture2(self: pointer, typeVal: cint, flags: cint): void {.importc: "QWidget_grabGesture2".}
proc fcQWidget_grabShortcut2(self: pointer, key: pointer, context: cint): cint {.importc: "QWidget_grabShortcut2".}
proc fcQWidget_setShortcutEnabled2(self: pointer, id: cint, enable: bool): void {.importc: "QWidget_setShortcutEnabled2".}
proc fcQWidget_setShortcutAutoRepeat2(self: pointer, id: cint, enable: bool): void {.importc: "QWidget_setShortcutAutoRepeat2".}
proc fcQWidget_setWindowFlag2(self: pointer, param1: cint, on: bool): void {.importc: "QWidget_setWindowFlag2".}
proc fcQWidget_setAttribute2(self: pointer, param1: cint, on: bool): void {.importc: "QWidget_setAttribute2".}
proc fcQWidget_createWindowContainer2(window: pointer, parent: pointer): pointer {.importc: "QWidget_createWindowContainer2".}
proc fcQWidget_createWindowContainer3(window: pointer, parent: pointer, flags: cint): pointer {.importc: "QWidget_createWindowContainer3".}
proc fQWidget_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QWidget_virtualbase_metaObject".}
proc fcQWidget_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QWidget_override_virtual_metaObject".}
proc fQWidget_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QWidget_virtualbase_metacast".}
proc fcQWidget_override_virtual_metacast(self: pointer, slot: int) {.importc: "QWidget_override_virtual_metacast".}
proc fQWidget_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QWidget_virtualbase_metacall".}
proc fcQWidget_override_virtual_metacall(self: pointer, slot: int) {.importc: "QWidget_override_virtual_metacall".}
proc fQWidget_virtualbase_devType(self: pointer, ): cint{.importc: "QWidget_virtualbase_devType".}
proc fcQWidget_override_virtual_devType(self: pointer, slot: int) {.importc: "QWidget_override_virtual_devType".}
proc fQWidget_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QWidget_virtualbase_setVisible".}
proc fcQWidget_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QWidget_override_virtual_setVisible".}
proc fQWidget_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QWidget_virtualbase_sizeHint".}
proc fcQWidget_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QWidget_override_virtual_sizeHint".}
proc fQWidget_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QWidget_virtualbase_minimumSizeHint".}
proc fcQWidget_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QWidget_override_virtual_minimumSizeHint".}
proc fQWidget_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QWidget_virtualbase_heightForWidth".}
proc fcQWidget_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QWidget_override_virtual_heightForWidth".}
proc fQWidget_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QWidget_virtualbase_hasHeightForWidth".}
proc fcQWidget_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QWidget_override_virtual_hasHeightForWidth".}
proc fQWidget_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QWidget_virtualbase_paintEngine".}
proc fcQWidget_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QWidget_override_virtual_paintEngine".}
proc fQWidget_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QWidget_virtualbase_event".}
proc fcQWidget_override_virtual_event(self: pointer, slot: int) {.importc: "QWidget_override_virtual_event".}
proc fQWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_mousePressEvent".}
proc fcQWidget_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_mousePressEvent".}
proc fQWidget_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_mouseReleaseEvent".}
proc fcQWidget_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_mouseReleaseEvent".}
proc fQWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQWidget_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_mouseDoubleClickEvent".}
proc fQWidget_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_mouseMoveEvent".}
proc fcQWidget_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_mouseMoveEvent".}
proc fQWidget_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_wheelEvent".}
proc fcQWidget_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_wheelEvent".}
proc fQWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_keyPressEvent".}
proc fcQWidget_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_keyPressEvent".}
proc fQWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_keyReleaseEvent".}
proc fcQWidget_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_keyReleaseEvent".}
proc fQWidget_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_focusInEvent".}
proc fcQWidget_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_focusInEvent".}
proc fQWidget_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_focusOutEvent".}
proc fcQWidget_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_focusOutEvent".}
proc fQWidget_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_enterEvent".}
proc fcQWidget_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_enterEvent".}
proc fQWidget_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_leaveEvent".}
proc fcQWidget_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_leaveEvent".}
proc fQWidget_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_paintEvent".}
proc fcQWidget_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_paintEvent".}
proc fQWidget_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_moveEvent".}
proc fcQWidget_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_moveEvent".}
proc fQWidget_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_resizeEvent".}
proc fcQWidget_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_resizeEvent".}
proc fQWidget_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_closeEvent".}
proc fcQWidget_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_closeEvent".}
proc fQWidget_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_contextMenuEvent".}
proc fcQWidget_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_contextMenuEvent".}
proc fQWidget_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_tabletEvent".}
proc fcQWidget_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_tabletEvent".}
proc fQWidget_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_actionEvent".}
proc fcQWidget_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_actionEvent".}
proc fQWidget_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_dragEnterEvent".}
proc fcQWidget_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_dragEnterEvent".}
proc fQWidget_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_dragMoveEvent".}
proc fcQWidget_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QWidget_override_virtual_dragMoveEvent".}
proc fQWidget_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QWidget_virtualbase_dragLeaveEvent".}
